alignment fixes

--- a/carnatic/static/carnatic/css/box.less
+++ b/carnatic/static/carnatic/css/box.less
@@ -26,7 +26,7 @@ div.item {
         top: 6px;
         left: 6px;
         width: 207px !important;
-        height: 205px !important;
+        height: 207px !important;
         overflow: hidden;
         a { 
             position: relative;
